# pandafilter

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh
.github/: CODEOWNERS
.github/workflows/: release.yml
Formula/: ccr.rb  pandafilter.rb
ccr/: Cargo.toml
ccr-core/src/: config.rs  global_rules.rs  patterns.rs  pipeline.rs  summarizer.rs
ccr-core/src/focus/: graph.rs  indexer.rs  mod.rs  query.rs
ccr-core/tests/: idea2_intent_query.rs  pattern_filters.rs  zoom_blocks.rs
ccr-core/tests/fixtures/: kubectl_get_pods.txt  make_build.txt  pip_install.txt  terraform_plan.txt
ccr-eval/src/: report.rs  runner.rs
ccr/src/: analytics_db.rs  hook.rs  integrity.rs  intent.rs  lib.rs  main.rs  session.rs  staleness.rs
ccr/src/agents/: mod.rs  opencode.rs
ccr/src/cmd/: compress.rs  discover.rs  doctor.rs  filter.rs  focus.rs  gain.rs  mod.rs  rewrite.rs  run.rs  update.rs
ccr/src/handlers/: bazel.rs  brew.rs  cargo.rs  cmake.rs  docker.rs  dotnet.rs  env.rs  focus_compress.rs  git.rs  helm.rs  journalctl.rs  kubectl.rs  maven.rs  mod.rs  npm.rs  pip.rs  read.rs  swift.rs  terraform.rs  tsc.rs
ccr/tests/: elastic_context.rs  handler_benchmarks.rs  idea3_delta.rs  idea7_historical_centroid.rs  opencode_init.rs  semantic_state_map.rs
config/: default_filters.toml
docker/: Dockerfile.ci  test.sh
docs/: index.html  vite.config.ts
