[workspace]
resolver = "2"
members = ["ccr-core", "ccr", "ccr-sdk", "ccr-eval"]

[workspace.package]
license = "MIT"

[workspace.dependencies]
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
anyhow      = "1"
thiserror   = "2"
clap        = { version = "4", features = ["derive"] }
tiktoken-rs = "0.6"
